[gd_scene load_steps=8 format=3 uid="uid://t3d1bodkwnf7"]

[ext_resource type="Script" path="res://scenes/player/water_gun/bullet/bullet.gd" id="1_f54c8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2vhim"]
albedo_color = Color(0.458824, 0.698039, 0.823529, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_kmjru"]
material = SubResource("StandardMaterial3D_2vhim")
top_radius = 0.02
bottom_radius = 0.02
height = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7itqo"]
points = PackedVector3Array(0.0159407, 0.503268, 0.0224837, -0.023268, -0.503268, -0.016725, -0.023268, -0.503268, 0.0159407, -0.023268, 0.503268, -0.016725, 0.0159407, -0.503268, -0.023268, 0.0159407, -0.503268, 0.0224837, 0.0159407, 0.503268, -0.023268, -0.023268, 0.503268, 0.0159407)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7ux38"]
direction = Vector3(-1, 0, 0)
flatness = 0.25
initial_velocity_min = 3.0
initial_velocity_max = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_25onl"]
albedo_color = Color(0.454902, 1, 0.996078, 1)

[sub_resource type="SphereMesh" id="SphereMesh_6hpbt"]
material = SubResource("StandardMaterial3D_25onl")
radius = 0.025
height = 0.05
radial_segments = 4
rings = 2

[node name="Bullet" type="Area3D"]
script = ExtResource("1_f54c8")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0170161, -0.999855, 0, 0.999855, 0.0170161, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_kmjru")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.0170161, -0.999855, 0, 0.999855, 0.0170161, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_7itqo")

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WaterSplash" type="GPUParticles3D" parent="."]
emitting = false
amount = 24
lifetime = 0.25
one_shot = true
speed_scale = 1.5
process_material = SubResource("ParticleProcessMaterial_7ux38")
draw_pass_1 = SubResource("SphereMesh_6hpbt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
